fix(responsive): fix title on mobile being on the border of the screen

--- a/css/style.scss
+++ b/css/style.scss
@@ -330,6 +330,14 @@ img[alt*="PUC Ultimate Invalides"] {
 
 .about {
   text-align: justify;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.about h2 {
+  text-align: left;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 .slide-description {
@@ -362,7 +370,7 @@ img[alt*="PUC Ultimate Invalides"] {
   border: 2px solid $primary-color;
   border-radius: 8px;
   padding: 1rem;
-  height: 600px;
+  height: 650px;
   background: #f9f5ff;
 }
 .summer {
@@ -563,7 +571,7 @@ img[alt*="PUC Ultimate Invalides"] {
     margin-top: 0.5rem;
     margin-bottom: 0;
     position: relative;
-    min-height: 320px;
+    min-height: 650px;
     background: #fff;
     overflow: hidden;
     top: 0;
